endpoint console / update